Little fixes after short PhD exam.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
     "   a small amount of preprocessing, is proportional to the number of objects that are listed.\n",
     "   *We do not count the time to actually output or process the objects; we are only concerned\n",
     "   with the amount of data structure change that occurs as the objects are being generated*. \n",
-    "   Suppose that the input to our generation algorithm is n, and that this will produce $N$\n",
+    "   Suppose that the input to our generation algorithm is $n$, and that this will produce $N$\n",
     "   objects, each of \"size\" $n$. A CAT algorithm has running time $\\mathcal{O}(N)$. In the typical \n",
     "   application of combinatorial generation, each object, as it is produced, is processed somehow.\n",
     "   If this processing takes time $\\mathcal{O}(n)$, then having a CAT algorithm has no advantage over\n",
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *Ranking* Gray codes\n",
+    "## *Unranking* Gray codes\n",
     "\n",
     "As a notational convenience we will now assume that the Gray code\n",
     "bitstrings are indexed $g_{n} \\ldots g_1$, in contrast to the usual 0-based indexing.\n",
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -360,10 +360,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b0\t0b0\t0\n",
-      "0b1\t0b1\t1\n",
-      "0b10\t0b11\t0\n",
-      "0b11\t0b10\t2\n",
+      "  0b0\t  0b0\t0\n",
+      "  0b1\t  0b1\t1\n",
+      " 0b10\t 0b11\t0\n",
+      " 0b11\t 0b10\t2\n",
       "0b100\t0b110\t0\n",
       "0b101\t0b111\t1\n",
       "0b110\t0b101\t0\n",
@@ -376,7 +376,7 @@
     "\n",
     "example_graycodes = binary_reflected_graycodes(length=3)\n",
     "for c, (o, s, p, r) in zip(count(), binary_reflected_graycodes_reduce(example_graycodes)):\n",
-    "    print('{}\\t{}\\t{}'.format(bin(c), bin(o), p))"
+    "    print('{:>5}\\t{:>5}\\t{}'.format(bin(c), bin(o), p))"
    ]
   },
   {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +424,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -451,10 +451,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b0\t0b0\t-1\n",
-      "0b1\t0b1\t0\n",
-      "0b10\t0b11\t1\n",
-      "0b11\t0b10\t0\n",
+      "  0b0\t  0b0\t-1\n",
+      "  0b1\t  0b1\t0\n",
+      " 0b10\t 0b11\t1\n",
+      " 0b11\t 0b10\t0\n",
       "0b100\t0b110\t2\n",
       "0b101\t0b111\t0\n",
       "0b110\t0b101\t1\n",
@@ -464,7 +464,7 @@
    ],
    "source": [
     "for i, (code, changingbit_position) in zip(count(), graycodes_direct(3)):\n",
-    "    print('{}\\t{}\\t{}'.format(bin(i),bin(code), changingbit_position))"
+    "    print('{:>5}\\t{:>5}\\t{}'.format(bin(i),bin(code), changingbit_position))"
    ]
   },
   {
@@ -479,7 +479,7 @@
     "\\tau_{i} = \\left\\lbrace \n",
     "\\begin{array}{ll}\n",
     "i & \\text{if } b_{i}=0 \\vee b_{i-1}=1\\\\\n",
-    "\\min_{k\\in\\lbrace 1,\\ldots,n\\rbrace}{\\lbrace k: b_{k}=0 \\rbrace} & \\text{if } b_{i}=1 \\vee b_{i-1}=0\n",
+    "\\min_{k\\in\\lbrace i+1,\\ldots,n\\rbrace}{\\lbrace k: b_{k}=0 \\rbrace} & \\text{if } b_{i}=1 \\vee b_{i-1}=0\n",
     "\\end{array} \n",
     "\\right.\n",
     "$$\n",
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -619,7 +619,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -641,7 +641,7 @@
        "[0, 1, 0, 2, 0, 1, 0]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -661,10 +661,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b0\t0b0\t-1\n",
-      "0b1\t0b1\t0\n",
-      "0b10\t0b11\t1\n",
-      "0b11\t0b10\t0\n",
+      "  0b0\t  0b0\t-1\n",
+      "  0b1\t  0b1\t0\n",
+      " 0b10\t 0b11\t1\n",
+      " 0b11\t 0b10\t0\n",
       "0b100\t0b110\t2\n",
       "0b101\t0b111\t0\n",
       "0b110\t0b101\t1\n",
@@ -675,7 +675,7 @@
    "source": [
     "graycodes_with_positions = graycodes_by_transition_sequence(rightmost_zeroes_in_binary_counting(3))\n",
     "for b, (code, p) in zip(count(), graycodes_with_positions):\n",
-    "    print('{}\\t{}\\t{}'.format(bin(b), bin(code), p))"
+    "    print('{:>5}\\t{:>5}\\t{}'.format(bin(b), bin(code), p))"
    ]
   },
   {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -730,7 +730,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -777,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *Unranking* Gray codes\n",
+    "## *Ranking* Gray codes\n",
     "\n",
     "Although not required, we can work the relation $k_{i−1} = k_i \\oplus  g_{i-1}$ backwards, namely given a Gray code `g` find the corresponding position or rank `k`. To succeed, we think inductively as follows: rewrite the same schema, starting from the very left, namely the most significant part\n",
     "\n",
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -867,7 +867,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -918,7 +918,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1071,7 +1071,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1098,32 +1098,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b111 -1 -1\n",
-      "0b1101 1 3\n",
-      "0b1110 0 1\n",
-      "0b1011 0 2\n",
-      "0b11001 1 4\n",
-      "0b11010 0 1\n",
-      "0b11100 1 2\n",
-      "0b10101 0 3\n",
-      "0b10110 0 1\n",
-      "0b10011 0 2\n",
-      "0b110001 1 5\n",
-      "0b110010 0 1\n",
-      "0b110100 1 2\n",
-      "0b111000 2 3\n",
-      "0b101001 0 4\n",
-      "0b101010 0 1\n",
-      "0b101100 1 2\n",
-      "0b100101 0 3\n",
-      "0b100110 0 1\n",
-      "0b100011 0 2\n"
+      "   0b111\t-1\t-1\n",
+      "  0b1101\t1\t3\n",
+      "  0b1110\t0\t1\n",
+      "  0b1011\t0\t2\n",
+      " 0b11001\t1\t4\n",
+      " 0b11010\t0\t1\n",
+      " 0b11100\t1\t2\n",
+      " 0b10101\t0\t3\n",
+      " 0b10110\t0\t1\n",
+      " 0b10011\t0\t2\n",
+      "0b110001\t1\t5\n",
+      "0b110010\t0\t1\n",
+      "0b110100\t1\t2\n",
+      "0b111000\t2\t3\n",
+      "0b101001\t0\t4\n",
+      "0b101010\t0\t1\n",
+      "0b101100\t1\t2\n",
+      "0b100101\t0\t3\n",
+      "0b100110\t0\t1\n",
+      "0b100011\t0\t2\n"
      ]
     }
    ],
    "source": [
     "for c, i, j in graycodes_combinations(6,3):\n",
-    "    print(bin(c), i, j)"
+    "    print(\"{:>8}\\t{}\\t{}\".format(bin(c), i, j))"
    ]
   },
   {
@@ -1196,7 +1196,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def graycodes_combinations_homogeneous(n, k):\n",
+       "\n",
+       "    combination = set_all(k)\n",
+       "\n",
+       "    def swap(i, j):\n",
+       "        nonlocal combination\n",
+       "        combination = toggle_bits(combination, i, j)\n",
+       "        yield combination, i, j \n",
+       "\n",
+       "    def gen(n, k):\n",
+       "        if k == 1: \n",
+       "            for i in range(n-1): yield from swap(i, i+1)\n",
+       "        elif k in range(2, n):\n",
+       "            #yield from itertools.chain(gen(n-1, k), swap(k-2, n-3), neg(n-2, k-1), swap(k-2, n-1), gen(n-2, k-2))\n",
+       "            yield from itertools.chain(gen(n-1, k), swap(n-1, n-2), neg(n-2, k-1), swap(k-2, n-2), gen(n-2, k-2))\n",
+       "\n",
+       "    def neg(n, k):\n",
+       "        if k == 1: \n",
+       "            for i in range(n-1): yield from swap(i, i+1)\n",
+       "        elif k in range(2, n):\n",
+       "            #yield from itertools.chain(neg(n-2, k-2), swap(k-2, n-1), gen(n-2, k-1), swap(k-2, n-3), neg(n-1, k))\n",
+       "            yield from itertools.chain(neg(n-2, k-2), swap(k-2, n-2), gen(n-2, k-1), swap(n-1, n-2), neg(n-1, k))\n",
+       "\n",
+       "    yield combination, -1, -1\n",
+       "    yield from gen(n, k)\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(graycodes_combinations_homogeneous)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1205,31 +1257,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\t-1\t   0b111\n",
-      "3\t2\t  0b1011\n",
-      "1\t2\t  0b1101\n",
-      "0\t1\t  0b1110\n",
-      "4\t3\t 0b10110\n",
-      "0\t1\t 0b10101\n",
-      "2\t1\t 0b10011\n",
-      "1\t3\t 0b11001\n",
-      "0\t1\t 0b11010\n",
-      "1\t2\t 0b11100\n",
-      "5\t4\t0b101100\n",
-      "0\t2\t0b101001\n",
-      "0\t1\t0b101010\n",
-      "3\t2\t0b100110\n",
-      "0\t1\t0b100101\n",
-      "2\t1\t0b100011\n",
-      "1\t4\t0b110001\n",
-      "0\t1\t0b110010\n",
-      "1\t2\t0b110100\n",
-      "2\t3\t0b111000\n"
+      "-1\t-1\t  0b1111\n",
+      "4\t3\t 0b10111\n",
+      "2\t3\t 0b11011\n",
+      "2\t1\t 0b11101\n",
+      "0\t1\t 0b11110\n",
+      "5\t4\t0b101110\n",
+      "0\t1\t0b101101\n",
+      "1\t2\t0b101011\n",
+      "3\t2\t0b100111\n",
+      "2\t4\t0b110011\n",
+      "2\t1\t0b110101\n",
+      "0\t1\t0b110110\n",
+      "3\t2\t0b111010\n",
+      "0\t1\t0b111001\n",
+      "0\t2\t0b111100\n",
+      "6\t5\t0b1011100\n",
+      "0\t1\t0b1011111\n",
+      "1\t2\t0b1011001\n",
+      "1\t3\t0b1010011\n",
+      "2\t1\t0b1010101\n",
+      "0\t1\t0b1010110\n",
+      "4\t3\t0b1001110\n",
+      "0\t1\t0b1001101\n",
+      "1\t2\t0b1001011\n",
+      "3\t2\t0b1000111\n",
+      "2\t5\t0b1100011\n",
+      "2\t1\t0b1100101\n",
+      "0\t1\t0b1100110\n",
+      "3\t2\t0b1101010\n",
+      "0\t1\t0b1101001\n",
+      "0\t2\t0b1101100\n",
+      "4\t3\t0b1110100\n",
+      "0\t1\t0b1110111\n",
+      "1\t2\t0b1110001\n",
+      "0\t3\t0b1111000\n",
+      "7\t6\t0b10111000\n",
+      "0\t1\t0b10111011\n",
+      "1\t2\t0b10111101\n",
+      "2\t3\t0b10110001\n",
+      "1\t4\t0b10100011\n",
+      "2\t1\t0b10100101\n",
+      "0\t1\t0b10100110\n",
+      "3\t2\t0b10101010\n",
+      "0\t1\t0b10101001\n",
+      "0\t2\t0b10101100\n",
+      "5\t4\t0b10011100\n",
+      "0\t1\t0b10011111\n",
+      "1\t2\t0b10011001\n",
+      "1\t3\t0b10010011\n",
+      "2\t1\t0b10010101\n",
+      "0\t1\t0b10010110\n",
+      "4\t3\t0b10001110\n",
+      "0\t1\t0b10001101\n",
+      "1\t2\t0b10001011\n",
+      "3\t2\t0b10000111\n",
+      "2\t6\t0b11000011\n",
+      "2\t1\t0b11000101\n",
+      "0\t1\t0b11000110\n",
+      "3\t2\t0b11001010\n",
+      "0\t1\t0b11001001\n",
+      "0\t2\t0b11001100\n",
+      "4\t3\t0b11010100\n",
+      "0\t1\t0b11010111\n",
+      "1\t2\t0b11010001\n",
+      "0\t3\t0b11011000\n",
+      "5\t4\t0b11101000\n",
+      "0\t1\t0b11101011\n",
+      "1\t2\t0b11101101\n",
+      "2\t3\t0b11100001\n",
+      "0\t4\t0b11110000\n"
      ]
     }
    ],
    "source": [
-    "for c, i, j in graycodes_combinations_homogeneous(6,3):\n",
+    "for c, i, j in graycodes_combinations_homogeneous(8,4):\n",
     "    print('{}\\t{}\\t{:>8}'.format(i, j, bin(c),))"
    ]
   },
