Add links to a curious board game.

--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -26,12 +26,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The following references are mainly about *bit-masking* and *dynamic programming*:\n",
     "   - http://www.codeforces.com/blog/entry/337\n",
     "   - https://www.topcoder.com/community/data-science/data-science-tutorials/assignment-problem-and-hungarian-algorithm/\n",
     "   - http://codeforces.com/contest/11/problem/D\n",
     "   - https://www.codechef.com/problems/TOOLS\n",
     "   - http://codeforces.com/problemset/tags/bitmasks\n",
-    "   - http://codeforces.com/contest/664/problem/A"
+    "   - http://codeforces.com/contest/664/problem/A\n",
+    "   \n",
+    "On the other hand, the following is a curious puzzle (found by looking for a way to draw *necklaces*):\n",
+    "   - https://en.wikipedia.org/wiki/Masyu\n",
+    "   - http://codegolf.stackexchange.com/questions/49061/stringing-a-pearl-necklace"
    ]
   },
   {
