Add references to *quadtrees* to speed up backtracking for *parallelogram polyomiones*.

--- a/tutorials/backtrack.ipynb
+++ b/tutorials/backtrack.ipynb
@@ -2540,6 +2540,17 @@
    "metadata": {},
    "source": [
     "---\n",
+    "Maybe *quadtrees* should be helpful:\n",
+    "   - https://en.wikipedia.org/wiki/Quadtree\n",
+    "   - http://jimkang.com/quadtreevis/\n",
+    "   - http://bl.ocks.org/mbostock/4343214"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc/4.0/88x31.png\" /></a><br /><span xmlns:dct=\"http://purl.org/dc/terms/\" property=\"dct:title\">Backtracking tutorial</span> by <a xmlns:cc=\"http://creativecommons.org/ns#\" href=\"massimo.nocentini@unifi.it\" property=\"cc:attributionName\" rel=\"cc:attributionURL\">Massimo Nocentini</a> is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc/4.0/\">Creative Commons Attribution-NonCommercial 4.0 International License</a>.<br />Based on a work at <a xmlns:dct=\"http://purl.org/dc/terms/\" href=\"https://github.com/massimo-nocentini/competitive-programming/blob/master/tutorials/backtrack.ipynb\" rel=\"dct:source\">https://github.com/massimo-nocentini/competitive-programming/blob/master/tutorials/backtrack.ipynb</a>."
    ]
   }
