--- a/tutorials/oeis-mining.ipynb
+++ b/tutorials/oeis-mining.ipynb
@@ -113,7 +113,8 @@
    "source": [
     "# Analysis\n",
     "\n",
-    "A link to the official documentation with many graph algorithms provided by `networkx` module: https://networkx.readthedocs.io/en/stable/reference/algorithms.html"
+    "   - A link to the official documentation with many graph algorithms provided by `networkx` module: https://networkx.readthedocs.io/en/stable/reference/algorithms.html\n",
+    "   - A link to the drawing algorithm behind `spring_layout`: https://en.wikipedia.org/wiki/Force-directed_graph_drawing#cite_note-1"
    ]
   },
   {
@@ -121,71 +122,6 @@
    "metadata": {},
    "source": [
     "# Use cases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "def make_nx_graph(graph, summary=True, digraph=True, \n",
-    "                  node_remp=lambda n, G: False, \n",
-    "                  edge_remp=lambda u, v, G: False):\n",
-    "\n",
-    "    G = nx.DiGraph() if digraph else nx.Graph()\n",
-    "\n",
-    "    for seq_id, v in graph.items():\n",
-    "        for ref_seq_id in v['xref_as_set']:\n",
-    "            G.add_edge(seq_id, ref_seq_id)\n",
-    "\n",
-    "    G.remove_nodes_from([n for n in G.nodes() if node_remp(n, G)])\n",
-    "    G.remove_edges_from([(u, v) for u, v in G.edges() if edge_remp(u, v, G)])\n",
-    "            \n",
-    "    if summary:\n",
-    "        print(\"A graph with {} nodes and {} edges will be drawn\".format(len(G.nodes()),len(G.edges())))\n",
-    "        \n",
-    "    return G\n",
-    "\n",
-    "def draw_nx_graph(G, nodes_colors={}, filename=None, nodes_labels={}):\n",
-    "    \n",
-    "    if 'draw' not in nodes_labels: nodes_labels['draw'] = True\n",
-    "    \n",
-    "    nc = defaultdict(lambda: 'gray')\n",
-    "    nc.update(nodes_colors)\n",
-    "    \n",
-    "    pos=nx.spring_layout(G)#, iterations=200) # positions for all nodes\n",
-    "\n",
-    "    #for seq_id, color_code in favorite_nodes.items():\n",
-    "    degrees = G.in_degree() if G.is_directed() else G.degree()\n",
-    "    for seq_id in G.nodes():\n",
-    "        nx.draw_networkx_nodes(G, pos, nodelist=[seq_id], \n",
-    "                               node_color=nc[seq_id],\n",
-    "                               node_size=degrees[seq_id]*10, \n",
-    "                               alpha=0.8)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    nx.draw_networkx_nodes(G,pos,\n",
-    "                           nodelist=set(G.nodes())-set(favorite_nodes.keys()),\n",
-    "                           node_color='r',\n",
-    "                           node_size=500,\n",
-    "                       alpha=0.8)\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    nx.draw_networkx_edges(G,pos,width=1.0,alpha=0.5)\n",
-    "    \n",
-    "    if nodes_labels['draw']:\n",
-    "        ls = {n:nodes_labels[n] if n in nodes_labels else (str(n) if G.in_degree()[n] > 10 else \"\") \n",
-    "              for n in G.nodes()}\n",
-    "        nx.draw_networkx_labels(G,pos,ls,font_size=16)\n",
-    "\n",
-    "    plt.axis('off')\n",
-    "    if filename: plt.savefig(filename) # save as png\n",
-    "    else: plt.show()"
    ]
   },
   {
