Adjust `oeis-interaction` tutorial in order to be updated with last changes in `oeis` module.

--- a/tutorials/oeis-interaction.ipynb
+++ b/tutorials/oeis-interaction.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -189,9 +189,57 @@
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*"
+     ]
+    }
+   ],
    "source": [
     "searchable = oeis_search(id=45,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "_Results for query: <a href='https://oeis.org/search?fmt=json&q=id%3AA000045&start=0'>https://oeis.org/search?fmt=json&q=id%3AA000045&start=0</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A000045'>A000045</a></b>: <i>Fibonacci numbers: F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1.</i><br></div>\n",
+       "\n",
+       "by _N. J. A. Sloane_, 1964\n",
+       "\n",
+       "_Keywords_: `core,nonn,nice,easy,hear,changed`\n",
+       "\n",
+       "_Data_:\n",
+       "\n",
+       "$$\n",
+       "\\begin{array}{c|ccccccccccccccc}\n",
+       "n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 \\\\\n",
+       "\\hline\n",
+       "A000045(n) & 0 & 1 & 1 & 2 & 3 & 5 & 8 & 13 & 21 & 34 & 55 & 89 & 144 & 233 & 377\n",
+       "\\end{array}\n",
+       "$$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "searchable(data_only=True, comment=lambda i,c: \"binomial\" in c)"
    ]
   },
   {
@@ -205,7 +253,7 @@
     {
      "data": {
       "text/markdown": [
-       "_Results for query: <a href='https://oeis.org/search?fmt=json&start=0&q=id%3AA000045'>https://oeis.org/search?fmt=json&start=0&q=id%3AA000045</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A000045'>A000045</a></b>: <i>Fibonacci numbers: F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1.</i><br></div>\n",
+       "_Results for query: <a href='https://oeis.org/search?fmt=json&q=id%3AA000045&start=0'>https://oeis.org/search?fmt=json&q=id%3AA000045&start=0</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A000045'>A000045</a></b>: <i>Fibonacci numbers: F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1.</i><br></div>\n",
        "\n",
        "by _N. J. A. Sloane_, 1964\n",
        "\n",
@@ -214,10 +262,10 @@
        "_Data_:\n",
        "\n",
        "$$\n",
-       "\\begin{array}{c|cccccccccccccccccccc}\n",
-       "n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 \\\\\n",
+       "\\begin{array}{c|ccccccccccccccc}\n",
+       "n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 \\\\\n",
        "\\hline\n",
-       "A000045(n) & 0 & 1 & 1 & 2 & 3 & 5 & 8 & 13 & 21 & 34 & 55 & 89 & 144 & 233 & 377 & 610 & 987 & 1597 & 2584 & 4181\n",
+       "A000045(n) & 0 & 1 & 1 & 2 & 3 & 5 & 8 & 13 & 21 & 34 & 55 & 89 & 144 & 233 & 377\n",
        "\\end{array}\n",
        "$$\n",
        "\n",
@@ -502,6 +550,7 @@
        "   - D. Chmiela, K. Kaczmarek, R. Witula, Binomials Transformation Formulas of Scaled Fibonacci Numbers (submitted 2012).\n",
        "   - B. A. Davey and H. A. Priestley, Introduction to Lattices and Order (2nd edition), CUP, 2002. (See Exercise 1.15.)\n",
        "   - B. Davis, 'The law of first digits' in 'Science Today'(subsequently renamed '2001') March 1980 p. 55, Times of India, Mumbai.\n",
+       "   - B. Demirturk, R. Keskin, <a href=\"https://cs.uwaterloo.ca/journals/JIS/VOL12/Demirturk/demirturk3.html\">Integer Solutions of Some Diophantine Equations via Fibonacci and Lucas Numbers</a>, JIS 12 (2009) 09.8.7\n",
        "   - S. R. Finch, Mathematical Constants, Cambridge, 2003, Section 1.2.\n",
        "   - R. P. Grimaldi, Compositions without the summand 1, Proceedings Thirty-second Southeastern International Conference on Combinatorics, Graph Theory and Computing (Baton Rouge, LA, 2001). Congr. Numer. 152 (2001), 33-43.\n",
        "   - H. Halberstam and K. F. Roth, Sequences, Oxford, 1966; see Appendix.\n",
@@ -565,19 +614,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*"
+     ]
+    }
+   ],
    "source": [
     "searchable = oeis_search(seq=[1,1,2,5,14,42, 132, 429])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -586,7 +643,7 @@
     {
      "data": {
       "text/markdown": [
-       "_Results for query: <a href='https://oeis.org/search?q=1%2C+1%2C+2%2C+5%2C+14%2C+42%2C+132%2C+429&fmt=json&start=0'>https://oeis.org/search?q=1%2C+1%2C+2%2C+5%2C+14%2C+42%2C+132%2C+429&fmt=json&start=0</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A000108'>A000108</a></b>: <i>Catalan numbers: C(n) = binomial(2n,n)/(n+1) = (2n)!/(n!(n+1)!). Also called Segner numbers.</i><br></div>\n",
+       "_Results for query: <a href='https://oeis.org/search?fmt=json&q=1%2C+1%2C+2%2C+5%2C+14%2C+42%2C+132%2C+429&start=0'>https://oeis.org/search?fmt=json&q=1%2C+1%2C+2%2C+5%2C+14%2C+42%2C+132%2C+429&start=0</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A000108'>A000108</a></b>: <i>Catalan numbers: C(n) = binomial(2n,n)/(n+1) = (2n)!/(n!(n+1)!). Also called Segner numbers.</i><br></div>\n",
        "\n",
        "by _N. J. A. Sloane_\n",
        "\n",
@@ -799,6 +856,7 @@
        "   - Anders Hyllengren, <a href=\"/<a href=\"http://oeis.org/A001006\">A001006</a>/a001006_5.pdf\">Four integer sequences</a>, Oct 04 1985. Observes essentially that <a href=\"http://oeis.org/A000984\">A000984</a> and <a href=\"http://oeis.org/A002426\">A002426</a> are inverse binomial transforms of each other, as are <a href=\"http://oeis.org/A000108\">A000108</a> and <a href=\"http://oeis.org/A001006\">A001006</a>.\n",
        "   - I. Jensen, <a href=\"http://www.ms.unimelb.edu.au/~iwan/polygons/Polygons_ser.html\">Series exapansions for self-avoiding polygons</a>\n",
        "   - S. Johnson, <a href=\"http://web.archive.org/web/20080129074833/http://www.saintanns.k12.ny.us/depart/math/Seth/catafrm.html\">The Catalan Numbers</a>\n",
+       "   - A Joseph, P Lamprou, <a href=\"http://arxiv.org/abs/1512.00406\">A new interpretation of Catalan numbers</a>, arXiv preprint arXiv:1512.00406, 2015\n",
        "   - A. Karttunen, <a href=\"/<a href=\"http://oeis.org/A014486\">A014486</a>/a014486.pdf\">Illustration of initial terms up to size n=7</a>\n",
        "   - C. Kimberling, <a href=\"http://www.cs.uwaterloo.ca/journals/JIS/VOL6/Kimberling/kimberling24.html\">Matrix Transformations of Integer Sequences</a>, J. Integer Seqs., Vol. 6, 2003.\n",
        "   - D. E. Knuth, <a href=\"http://arxiv.org/abs/math/9207221\">Convolution polynomials</a>, The Mathematica J., 2 (1992), 67-78.\n",
@@ -979,6 +1037,7 @@
        "   - D. E. Knuth, The Art of Computer Programming, vol. 4A, Combinatorial Algorithms, Section 7.2.1.6 (p. 450).\n",
        "   - Thomas Koshy and Mohammad Salmassi, \"Parity and Primality of Catalan Numbers\", College Mathematics Journal, Vol. 37, No. 1 (Jan 2006), pp. 52-53.\n",
        "   - M. Kosters, A theory of hexaflexagons, Nieuw Archief Wisk., 17 (1999), 349-362.\n",
+       "   - M Konvalinka, S Wagner, The shape of random tanglegrams, arXiv preprint arXiv:1512.01168, 2015\n",
        "   - E. Krasko, A. Omelchenko, Brown's Theorem and its Application for Enumeration of Dissections and Planar Trees, The Electronic Journal of Combinatorics, 22 (2105), #P1.17.\n",
        "   - Kreweras, G. Sur les partitions non croisees d'un cycle. (French) Discrete Math. 1 (1972), no. 4, 333-350. MR0309747 (46 #8852)\n",
        "   - C. Krishnamachary and M. Bheemasena Rao, Determinants whose elements are Eulerian, prepared Bernoullian and other numbers, J. Indian Math. Soc., 14 (1922), 55-62, 122-138 and 143-146.\n",
@@ -1037,7 +1096,7 @@
        "\n",
        "by _Paul D. Hanna_, Jun 16 2006, Jan 24 2008\n",
        "\n",
-       "_Keywords_: `nonn,easy,changed`\n",
+       "_Keywords_: `nonn,easy`\n",
        "\n",
        "_Data_:\n",
        "\n",
@@ -1364,13 +1423,13 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "searchable(data_upper_limit=15, comment=lambda i,c: i in range(10))"
+    "searchable(comment=lambda i,c: i in range(10))"
    ]
   },
   {
@@ -1382,19 +1441,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*"
+     ]
+    }
+   ],
    "source": [
     "searchable = oeis_search(query=\"pascal\", table=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1403,7 +1470,7 @@
     {
      "data": {
       "text/markdown": [
-       "_Results for query: <a href='https://oeis.org/search?fmt=json&start=0&q=pascal+keyword%3Atabl'>https://oeis.org/search?fmt=json&start=0&q=pascal+keyword%3Atabl</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A007318'>A007318</a></b>: <i>Pascal's triangle read by rows: C(n,k) = binomial(n,k) = n!/(k!*(n-k)!), 0 <= k <= n.</i><br></div>\n",
+       "_Results for query: <a href='https://oeis.org/search?fmt=json&q=pascal+keyword%3Atabl&start=0'>https://oeis.org/search?fmt=json&q=pascal+keyword%3Atabl&start=0</a>_<br><hr><div align='center'><b><a href='http://oeis.org/A007318'>A007318</a></b>: <i>Pascal's triangle read by rows: C(n,k) = binomial(n,k) = n!/(k!*(n-k)!), 0 <= k <= n.</i><br></div>\n",
        "\n",
        "by _N. J. A. Sloane_ and _Mira Bernstein_, Apr 28 1994\n",
        "\n",
@@ -2118,13 +2185,13 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "searchable(data_upper_limit=(10,10), comment=lambda i,c: i in range(10))"
+    "searchable(comment=lambda i,c: i in range(10))"
    ]
   },
   {
@@ -2136,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -2148,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -2167,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -2178,7 +2245,7 @@
        "'https://oeis.org/search?fmt=json&q=fibonacci&start=0'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -2197,10 +2264,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['greeting', 'start', 'results', 'query', 'count'])"
+       "dict_keys(['results', 'query', 'greeting', 'count', 'start'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -2231,7 +2298,7 @@
        " 'F(n+1) is the number of perfect matchings in ladder graph L_n = P_2 X P_n. - Sharon Sela (sharonsela(AT)hotmail.com), May 19 2002']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,10 +2328,10 @@
        "_Data_:\n",
        "\n",
        "$$\n",
-       "\\begin{array}{c|cccccccccccccccccccc}\n",
-       "n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 \\\\\n",
+       "\\begin{array}{c|ccccccccccccccc}\n",
+       "n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 \\\\\n",
        "\\hline\n",
-       "A000045(n) & 0 & 1 & 1 & 2 & 3 & 5 & 8 & 13 & 21 & 34 & 55 & 89 & 144 & 233 & 377 & 610 & 987 & 1597 & 2584 & 4181\n",
+       "A000045(n) & 0 & 1 & 1 & 2 & 3 & 5 & 8 & 13 & 21 & 34 & 55 & 89 & 144 & 233 & 377\n",
        "\\end{array}\n",
        "$$\n",
        "\n",
@@ -2330,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -2341,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -2350,30 +2417,42 @@
      "data": {
       "text/markdown": [
        "```python\n",
-       "def oeis_search(id=None, seq=None, query=\"\", start=0,):\n",
+       "def oeis_search(id=None, seq=None, query=\"\", start=0, table=False, xref=[], **kwds):\n",
        "\n",
        "    # the following imports are too specific to appear at the top of the module.\n",
        "    from requests import get\n",
        "    from IPython.display import Markdown\n",
        "\n",
-       "    payload = {\"fmt\": \"json\", \"start\": start}\n",
        "    \n",
-       "    if id: payload.update({\"q\": \"id:A{:06d}\".format(id)})\n",
-       "    elif seq: payload.update({\"q\": \", \".join(map(str,seq))})\n",
-       "    else: payload.update({\"fmt\": \"json\", \"q\": query})\n",
-       "    \n",
-       "    try:\n",
-       "        doc_result = get(\"https://oeis.org/search\", params=payload,)\n",
-       "        doc = doc_result.json()\n",
-       "    except:\n",
+       "    query_components = [] # a list of query components, as strings to be joined later\n",
+       "\n",
+       "    if id: query_components.append(\"id:A{:06d}\".format(id))\n",
+       "    elif seq: query_components.append((\", \" if isinstance(seq, list) else \" \").join(map(str,seq)))\n",
+       "    else: query_components.append(query) \n",
+       "\n",
+       "    if table: query_components.append(\"keyword:tabl\")\n",
+       "    for r in xref: query_components.append(\"xref:A{:06d}\".format(id))\n",
+       "    for k,v in kwds.items(): query_components.append(\"{}:{}\".format(k,v))\n",
+       "\n",
+       "    def connection_error(exc):\n",
        "        return lambda **pp_kwds: Markdown(\"<hr>__Connection Error__<hr>\")\n",
-       "    \n",
-       "    def searchable(**pp_kwds):\n",
-       "        results_description = \"_Results for query: <a href='{url}'>{url}</a>_<br><hr>\".format(url=doc_result.url)\n",
-       "        inner_results = [pretty_print(result, **pp_kwds) for result in doc['results']]\n",
-       "        return Markdown(results_description + \"\\n<hr>\".join(inner_results))\n",
-       "    \n",
-       "    return searchable\n",
+       "\n",
+       "    def json_error(GET_result, exc):\n",
+       "        return lambda **pp_kwds: Markdown(\"<hr>__JSON decoding Error__:\\n```{}```<hr>\".format(GET_result.text))\n",
+       "\n",
+       "    def make_searchable(doc, GET_result):\n",
+       "\n",
+       "        def searchable(**pp_kwds):\n",
+       "            results_description = \"_Results for query: <a href='{url}'>{url}</a>_<br><hr>\".format(url=GET_result.url)\n",
+       "            inner_results = [pretty_print(result, **pp_kwds) for result in doc['results']]\n",
+       "            return Markdown(results_description + \"\\n<hr>\".join(inner_results))\n",
+       "\n",
+       "        return searchable\n",
+       "\n",
+       "    return fetch_payload(payload={\"fmt\": \"json\", \"start\": start, \"q\": ' '.join(query_components)},  \n",
+       "                         then=make_searchable,\n",
+       "                         network_error_handler=connection_error,\n",
+       "                         json_decoding_error_handler=json_error)\n",
        "\n",
        "```"
       ],
@@ -2381,7 +2460,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2392,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2402,23 +2481,29 @@
       "text/markdown": [
        "```python\n",
        "def pretty_print(doc, \n",
-       "                 head=None, \n",
+       "                 data_only=False,\n",
+       "                 head=None,\n",
        "                 keyword=None, \n",
-       "                 data_upper_limit=20,\n",
+       "                 data_representation=None, \n",
        "                 comment=lambda i, c: True,\n",
        "                 formula=lambda i, c: True,\n",
        "                 xref=lambda i, c: True,\n",
        "                 link=lambda i, c: \"broken link\" not in c,\n",
        "                 reference=lambda i, c: True,):\n",
        "    \n",
+       "    if not data_representation:\n",
+       "        data_representation = TableData(upper_limit=(10,10)) if 'tabl' in doc['keyword'] else ListData(upper_limit=15)\n",
+       "\n",
        "    builders = [head_builder(), \n",
        "                keyword_builder(), \n",
-       "                data_builder(upper_limit=data_upper_limit), \n",
-       "                comment_builder(filter_pred=comment), \n",
-       "                formula_builder(filter_pred=formula), \n",
-       "                xref_builder(filter_pred=xref),\n",
-       "                link_builder(filter_pred=link), \n",
-       "                reference_builder(filter_pred=reference)]\n",
+       "                data_builder(representation=data_representation)]\n",
+       "    \n",
+       "    if not data_only:\n",
+       "        builders.extend([comment_builder(filter_pred=comment), \n",
+       "                         formula_builder(filter_pred=formula), \n",
+       "                         xref_builder(filter_pred=xref),\n",
+       "                         link_builder(filter_pred=link), \n",
+       "                         reference_builder(filter_pred=reference)])\n",
        "    \n",
        "    descr = \"\\n\".join([builder(doc) for builder in builders])\n",
        "    return descr\n",
@@ -2429,7 +2514,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
